--- a/components/profile/default.htm
+++ b/components/profile/default.htm
@@ -3,9 +3,7 @@
 <div class="basic-page">
     <div class="container">
         <div class="page-title">
-            <h1>
-                {{ character.name }}
-            </h1>
+            <h1>{{ character.name }}</h1>
             <div class="sub-box"></div>
         </div>
 
