Frontlines beta... ahh.

--- a/components/profile/default.htm
+++ b/components/profile/default.htm
@@ -11,10 +11,10 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                     <a href="/character/{{ character.character }}">
-                        {{ character.name }}'s Profile
+                        Profile
                     </a>
                 </li>
-                <li class="breadcrumb-item active" aria-current="page">Frontline's Profile</li>
+                <li class="breadcrumb-item active" aria-current="page">Frontlines</li>
             </ol>
         </nav>
 
