--- a/components/install/default.htm
+++ b/components/install/default.htm
@@ -1,7 +1,7 @@
 <div class="basic-page">
     <div class="container">
         <div class="page-title">
-            <h1>Feast Installer</h1>
+            <h1>Frontlines Installer</h1>
             <div class="sub-box"></div>
         </div>
 
